KSENROLL-13088: Fixing issues in Perform Rollover with content spacing to align with Header title
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@70473 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2131,3 +2131,9 @@ section.uif-disclosure {
   position: static;
   float: left;
 }
+
+//Rollover Management header spacing KSENROLL-13088
+.ks-RolloverManagement-content {
+    padding-left: 6px;
+    padding-top: 0;
+}
